--- a/style.css
+++ b/style.css
@@ -4,19 +4,32 @@ body {
   background: rgb(20, 20, 20);
   overflow: hidden;
   font-family: 'Roboto';
-  // Push down the wrapper by half the page
-  margin: 50% 0 0;
+  /* push down the the wrapper by half the page */
+  margin: 50% 0 0 0;
   position: relative;
 }
-
+body::after {
+  content: '';
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 50%;
+  /* background to fade out the text as it goes up */
+  background: linear-gradient(
+    180deg,
+    rgba(20, 20, 20, 1) 40%,
+    rgba(20, 20, 20, 0) 100%
+  );
+}
 .wrapper {
   display: flex;
   height: 100%;
   width: 60%;
   margin: 0 auto;
+  /* perspective gives us a 3d space within the element to work with*/
+  /* perspective also has the effect of pushing the content "down" */
   perspective: 450px;
 }
-
 .scroll-text {
   color: #ffc909;
   font-size: 3vw;
@@ -26,7 +39,6 @@ body {
   position: relative;
   animation: scroll 60s linear forwards;
 }
-
 h1,
 h2 {
   text-align: center;
@@ -37,7 +49,6 @@ h2 {
     top: 0;
     transform: translateZ(0) rotateX(20deg);
   }
-
   to {
     top: -7500px;
     transform: translateZ(-2500px) rotateX(21deg);
